Changing name at the profile page

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Welcome to my portfolio!
+title: Vanessa Brischi Olivatto Fioravanti!
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
