--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Vanessa Brischi Olivatto Fioravanti!
+title: Vanessa Brischi Olivatto Fioravanti
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
